# FunkinLauncher

./: .gitignore  README.md  build.sh  ci.Dockerfile  flatpak.json  flatpak.yml  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: assets.yml  badge.yml  build.yml  container.yml  screenshot.yml  tauri.yml
flatpak/: it.evvsk.FunkinLauncher.json  it.evvsk.funkinlauncher.json
icons/: icon.icns
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/7z/linux/: 7z  7zCon.sfx  7za  7zr
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: download.rs  extract.rs  launch.rs  mod.rs  mods.rs
src/components/: DownloadModal.tsx  DownloadPanel.tsx  InstalledMods.tsx  ModCard.tsx  ModGrid.tsx  Notification.tsx  SkeletonGrid.tsx  Toast.tsx
src/context/: DownloadManagerContext.tsx
src/hooks/: downloadManager.ts  useBrowse.ts  useSearch.ts
src/layout/: Header.tsx
src/types/: mod.ts
src/utils/: format.ts  log.ts
