[package]
name = "funkinlauncher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "funkinlauncher_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2"
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
zip = "8.5.1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
futures-util = "0.3"
