[package]
name = "funkinlauncher"
version = "0.1.0"
description = "Download multiple Friday Night Funkin's mods flawlessly, powered by GameBanana's API."
authors = ["evvsk"]
edition = "2021"

[lib]
name = "funkinlauncher_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
futures-util = "0.3"
extract-archive = "0.1.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
