[package]
name = "funkinlauncher"
version = "1.0.0"
description = "Download multiple Friday Night Funkin's mods flawlessly, powered by GameBanana's API."
authors = ["evvsk"]
edition = "2021"

[lib]
name = "funkinlauncher_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = "2.6.1"

[dependencies]
tauri = { version = "2.6.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }

tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "process",
  "sync",
  "time"
] }

futures-util = "0.3"

lazy_static = "1.5"

[profile.release]
codegen-units = 4
lto = true
panic = "abort"
